feat(reports): support flow node frequency reports grouped by duration to be distributed by process
relates to OPT-5537